# dbgx-mcp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README.zh-CN.md
.codex/skills/openspec-apply-change/: SKILL.md
.codex/skills/openspec-archive-change/: SKILL.md
.codex/skills/openspec-bulk-archive-change/: SKILL.md
.codex/skills/openspec-continue-change/: SKILL.md
.codex/skills/openspec-explore/: SKILL.md
.codex/skills/openspec-ff-change/: SKILL.md
.codex/skills/openspec-onboard/: SKILL.md
.github/workflows/: ci.yml
.opencode/skills/openspec-apply-change/: SKILL.md
.opencode/skills/openspec-archive-change/: SKILL.md
.opencode/skills/openspec-bulk-archive-change/: SKILL.md
.opencode/skills/openspec-explore/: SKILL.md
.opencode/skills/openspec-ff-change/: SKILL.md
.opencode/skills/openspec-new-change/: SKILL.md
.opencode/skills/openspec-onboard/: SKILL.md
.opencode/skills/openspec-sync-specs/: SKILL.md
.opencode/skills/openspec-verify-change/: SKILL.md
cmake/: verify_windbg_exports.cmake
docs/superpowers/plans/: 2026-03-11-ci-cd-and-versioning.md
docs/superpowers/specs/: 2026-03-10-ci-cd-and-versioning-design.md
include/dbgx/mcp/: http_server.hpp  io_echo.hpp  json.hpp  json_rpc.hpp
include/dbgx/windbg/: command_executor.hpp  dbgeng_command_executor.hpp
openspec/changes/archive/2026-02-16-fix-windbg-extension-dll-exports/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-16-fix-windbg-extension-dll-exports/specs/windbg-http-mcp-eval/: spec.md
openspec/changes/archive/2026-02-16-windbg-plugin-http-mcp-eval/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-16-windbg-plugin-http-mcp-eval/specs/windbg-http-mcp-eval/: spec.md
openspec/changes/archive/2026-02-17-add-windbg-mcp-io-echo/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-add-windbg-mcp-io-echo/specs/windbg-http-mcp-eval/: spec.md
openspec/changes/archive/2026-02-17-auto-switch-port-on-bind-conflict/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-auto-switch-port-on-bind-conflict/specs/windbg-http-mcp-eval/: spec.md
openspec/changes/archive/2026-02-17-fix-windbg-mcp-tools-call-blocking/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-fix-windbg-mcp-tools-call-blocking/specs/windbg-http-mcp-eval/: spec.md
openspec/changes/archive/2026-02-17-fix-windbg-mcp-tools-call-blocking/specs/windbg-mcp-debug-observability/: spec.md
openspec/changes/archive/2026-02-17-optimize-readme-user-perspective/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-optimize-readme-user-perspective/specs/windbg-http-mcp-eval/: spec.md
openspec/changes/archive/2026-02-17-rename-build-artifact-to-dbgx-mcp-dll/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-rename-build-artifact-to-dbgx-mcp-dll/specs/build-artifact-name/: spec.md
openspec/changes/archive/2026-02-17-rename-build-artifact-to-dbgx-mcp-dll/specs/windbg-mcp-debug-observability/: spec.md
openspec/changes/archive/2026-02-17-serialize-mcp-eval-execution/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-serialize-mcp-eval-execution/specs/windbg-http-mcp-eval/: spec.md
openspec/changes/archive/2026-02-18-add-dbgx-skills/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-18-add-dbgx-skills/specs/dbgx-skills/: spec.md
openspec/specs/build-artifact-name/: spec.md
openspec/specs/dbgx-skills/: spec.md
openspec/specs/windbg-http-mcp-eval/: spec.md
openspec/specs/windbg-mcp-debug-observability/: spec.md
skills/dbgx-skills/: SKILL.md
src/: dbgx-mcp.cpp  dbgx-mcp.def  version.rc.in  windbg_mcp_extension.cpp  windbg_mcp_extension.def
src/mcp/: http_server.cpp  io_echo.cpp  json.cpp  json_rpc.cpp
src/windbg/: dbgeng_command_executor.cpp
tests/: mcp_output_spec_test.py  unit_tests.cpp
